# Island

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: config.json
src/: Game.cpp  Game.hpp  main.cpp
src/engine/core/: Config.cpp  Config.hpp  GameApp.cpp  GameApp.hpp  Time.cpp  Time.hpp
src/engine/input/: InputManager.cpp  InputManager.hpp
src/engine/render/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Sprite.hpp
src/engine/resource/: AudioManager.cpp  AudioManager.hpp  FontManager.cpp  FontManager.hpp  ResourceManager.cpp  ResourceManager.hpp  TextureManager.cpp  TextureManager.hpp
src/engine/utils/: Utils.hpp
